# aemet-fetch

./: .gitignore  README.md  pyproject.toml  tox.ini
src/aemet_fetch/: __init__.py  cli.py  station.py
